# myam_ws

./: README.md
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-03_15-50-30Z-修改baselink位置到z06.md  2026-04-03_15-55-23Z-终端报错调整建议.md  2026-04-20_13-35-39Z-context-from-my-ide.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/real_test/: AddEyeToHandSample.h  AddEyeToHandSampleRequest.h  AddEyeToHandSampleResponse.h
devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node
devel/lib/myam_description/: arm_gripper_hold_home.py  hold_arm_home.py  send_arm_hold_home.py
devel/lib/myam_simulation/: gazebo_fake_blue_attach.py  offboard_grasp.py  offboard_grasp_blue_cube.py
devel/lib/myam_sys_moveit/: merge_arm_rotor_joint_states.py  offboard_arm_apriltag_grasp.py  send_arm_hold_traj.py  start_px4_sitl_gazebo.sh
devel/lib/pkgconfig/: apriltag_ros.pc  myam_description.pc  myam_moveit.pc  myam_moveit_cfg.pc  myam_simulation.pc  myam_sys.pc  myam_sys_moveit.pc  real_roarm_d435_grasp.pc  real_test.pc  roarm_description.pc  roarm_moveit.pc
devel/lib/real_roarm_d435_grasp/: d435_blob_grasp_node.py
devel/lib/real_test/: blue_cube_grasping.py  camera_base_calib_eye_to_hand.py
devel/share/myam_simulation/: package.xml
devel/share/myam_simulation/cmake/: myam_simulationConfig.cmake
devel/share/myam_simulation/launch/: offboard_detect_apriltag.launch
devel/share/myam_sys_moveit/: package.xml
install/lib/myam_description/: delayed_controller_spawner.sh
install/lib/pkgconfig/: myam_description.pc
install/share/myam_description/: package.xml
src/PX4-airframe/: README.md  readme.txt
src/PX4-airframe/myam_sys/: model.config  myam_sys.sdf
src/PX4-airframe/myam_sys_d435/: model.config  myam_sys_d435.sdf
src/PX4-airframe/myam_sys_no_arm/: model.config  myam_sys_no_arm.sdf
src/PX4-airframe/myuam/: model.config  myuam.sdf
src/PX4-airframe/worlds/: apriltag.world  myam_grasping.world
src/apriltag_ros/config/: tags.yaml
src/myam_description/: CMakeLists.txt
src/myam_description/config/: gazebo_ros_control.yaml  joint_names_myam_sys.yaml
src/myam_description/launch/: display.launch  gazebo.launch  gazebo_drone_only.launch
src/myam_description/meshes/: gripper_link.STL  landing_gear_1_link.STL  landing_gear_2_link.STL  rotor_4_link.STL  rotor_6_link.STL
src/myam_description/rviz/: display_myam_sys.rviz
src/myam_description/scripts/: arm_gripper_hold_home.py
src/myam_description/urdf/: myam_drone_body.xacro  myam_drone_only.xacro  myam_roarm_effort.xacro  myam_sys.csv  myam_sys.urdf  myam_sys.xacro  myam_tail_battery_imu.xacro  roarm_m3_arm_mounted.xacro
src/myam_description/worlds/: myam_empty.world  myam_grasping.world  myam_grasping2.world
src/myam_description/xacro/: realsense_d435.xacro
src/myam_simulation/: CMakeLists.txt
src/myam_simulation/config/: apriltag_settings.yaml
src/myam_simulation/launch/: apriltag_d435.launch.xml  gazebo_fake_blue_attach.launch  grasp_blue_world_rviz_sync.launch  mavros_px4.launch.xml  myam_grasping_scene_sync.launch  myam_sys_d435_px4_mavros_apriltag.launch  offboard_grasp.launch  offboard_grasp_blue_cube.launch  sitl_grasp_blue_ground.launch  sitl_moveit.launch  sitl_task.launch
src/myam_simulation/models/apriltag_marker/: model.config
src/myam_simulation/models/apriltag_marker/materials/scripts/: apriltag.material
src/myam_simulation/scripts/: gazebo_fake_blue_attach.py  grasp_blue_cube_rviz_sync.py  offboard_detect_apriltag.py  offboard_grasp.py  start_px4_myam_sys_d435_sitl.sh
src/myam_sys_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/myam_sys_moveit/config/: gazebo_controllers.yaml  gazebo_myam_sys.urdf  kinematics_kdl_backup.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
src/myam_sys_moveit/doc/: moveit_ros_control_block_diagram.html
src/myam_sys_moveit/launch/: arm_moveit.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo_grasp_experiment.launch  gazebo_grasp_red_box.launch  gazebo_grasp_red_box_with_grasp.launch  gazebo_truth_body_tf.launch  mavros_bridge.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  perception.launch  planning_context.launch  px4_gazebo.launch  ros_controllers.launch  run_benchmark_ompl.launch  rviz_moveit_standalone.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  sitl_ground_arm.launch  stomp_planning_pipeline.launch.xml  task_bringup.launch  trajectory_execution.launch.xml
src/myam_sys_moveit/models/red_grasp_cube/: model.config  model.sdf
src/myam_sys_moveit/scripts/: export_myam_sdf_reference.sh  merge_arm_rotor_joint_states.py  relax_scene_collision_matrix.py  send_arm_hold_traj.py  start_px4_sitl_gazebo.sh
src/real_roarm_d435_grasp/: CMakeLists.txt  package.xml
src/real_roarm_d435_grasp/launch/: real_d435_grasp.launch
src/real_roarm_d435_grasp/scripts/: d435_blob_grasp_node.py
src/roarm_blue_cube_http/: CMakeLists.txt  package.xml  readme.md
src/roarm_blue_cube_http/launch/: blue_cube_to_roarm_http.launch
src/roarm_blue_cube_http/scripts/: blue_cube_to_roarm_http.py
src/roarm_description/: CMakeLists.txt  package.xml
src/roarm_description/config/: gazebo_ros_control.yaml  roarm_m3.rviz
src/roarm_description/launch/: display.launch  gazebo.launch
src/roarm_description/meshes/roarm_m3/: gripper_left_link.stl
src/roarm_description/urdf/roarm_m3/: materials.xacro  roarm_m3.gazebo  roarm_m3.trans  roarm_m3.xacro
src/roarm_moveit/: .setup_assistant  CMakeLists.txt
src/roarm_moveit/config/: fake_controllers.yaml  gazebo_roarm_m3.urdf  joint_limits.yaml  ompl_planning.yaml  roarm_m3.srdf  ros_controllers.yaml
src/roarm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  (+9 more)
(+56 files in other folders)
