<?xml version="1.0"?>
<package format="2">
  <name>real_roarm_d435_grasp</name>
  <version>0.1.0</version>
  <description>RealSense D435 color/depth blob detection + MoveIt grasp for Roarm-m3 (no MAVROS / no Gazebo).</description>
  <maintainer email="demo@example.com">demo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>myam_sys_moveit</exec_depend>
</package>
