<?xml version="1.0"?>
<package format="2">
  <name>roarm_description</name>
  <version>0.1.0</version>
  <description>用于 RoArm M3 机械臂在 RViz 与 Gazebo 中的可视化与仿真。</description>
  <maintainer email="ros@example.com">maintainer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>rospy</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <architecture_independent/>
  </export>
</package>
